--- a/public/css/mainq.css
+++ b/public/css/mainq.css
@@ -4,8 +4,14 @@
   padding: 30px;
   background: #fff;
   box-shadow: 10px 10px 30px 0px rgba(0, 0, 0, 0.11);
-  position: absolute;
+  position: fixed;
   bottom: 30px;
   left: 30px;
   z-index: 33;
+}
+
+@media screen and (max-width: 500px) {
+  .promotion-box {
+    display: none;
+  }
 }
