--- a/resources/sass/mainq.scss
+++ b/resources/sass/mainq.scss
@@ -6,8 +6,14 @@
     -webkit-box-shadow: 10px 10px 30px 0px rgba(0, 0, 0, 0.11);
     -moz-box-shadow: 10px 10px 30px 0px rgba(0, 0, 0, 0.11);
     box-shadow: 10px 10px 30px 0px rgba(0, 0, 0, 0.11);
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     left: 30px;
     z-index: 33;
+}
+
+@media screen and (max-width: 500px) {
+    .promotion-box {
+        display: none;
+    }
 }
